--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</script>
 				<!-- //script-for-swipebox -->
 		</div>
-		<iframe class="animated wow slideInLeft" data-wow-duration="1000ms" data-wow-delay="500ms" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.9579945977393!2d-73.87657738464283!3d40.806916839740346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f510a78ff341%3A0xe5b1e682c2e91238!2sNYS+Agriculture+%26+Markets!5e0!3m2!1sen!2sin!4v1456403781501" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+	<iframe src='https://webchat.botframework.com/embed/botty30539-bot?s=zK8ZIgw8m9o.NMNOy4ScP5ENz3DoZSVJ6NAujLD53cnB-mv3WGl2ijk'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
 
 
