--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<textarea type="text"  onfocus="this.value = '';" onblur="if (this.value == '') {this.value = ' ';}" required=""> </textarea>
 						<input type="submit" value="Submit" >
 					</form>
+					<iframe src='https://webchat.botframework.com/embed/botty30539-bot?s=zK8ZIgw8m9o.NMNOy4ScP5ENz3DoZSVJ6NAujLD53cnB-mv3WGl2ijk'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 				</div>
 				                        
 
